fix: Increase hover color contrast. Resolves https://github.com/weltspiegel-cottbus/mod_cookie_consent/issues/1 as well.

--- a/media/css/_cookie-consent.css
+++ b/media/css/_cookie-consent.css
@@ -108,8 +108,8 @@
     bottom: 0; /* Slide into view */
     height: 2.5rem;
     padding: 0.5rem 1rem;
-    background-color: color-mix(in srgb, var(--color-accent) 50%, black); /* Darken accent by mixing with black */
-    color: var(--color-fg-body); /* White text */
+    background-color: var(--color-accent-hover-bg);
+    color: var(--color-bg-body);
     box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.4);
 }
 
